8th commit - adds About page
About page lists the technologies used to create App

--- a/angu/html/about2.html
+++ b/angu/html/about2.html
@@ -10,7 +10,7 @@
 <head>
 
     <!-- Meta-Information -->
-    <title>ANGULA</title>
+    <title>CF Fun</title>
     <meta charset="utf-8">
     <meta name="description" content="AngularJs, html5, store, shopping, siteweb, cart"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
@@ -43,7 +43,7 @@
         </div>
          <!--Shopping Cart-->
 
-        <div class="content-count-cart-header dropdown">
+        <!--<div class="content-count-cart-header dropdown">
                     <a href="" title="go to shopping cart" class="dropdown-toggle" data-toggle="dropdown">
                         <i class="fa fa-shopping-cart"></i>
                         <p class="number-prod-cart">2</p> 
@@ -77,7 +77,7 @@
                           <div id="cartInfo"><p class="minucart-price">Subtotal $237.00</p></div>
                           <a href="shop/shoppingCart.html" id="goToCheckOut">Proceed to purchase</a>
                     </div> 
-            </div>
+        </div>-->
          <!--End Cart-->
         <div class="collapse navbar-collapse navbar-ex1-collapse dropdown-prod-cart-scroll scroll-menu">
         
