--- a/CarFindAbout.html
+++ b/CarFindAbout.html
@@ -6,31 +6,33 @@
 <!--[if IE 8]>
 <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!-->
-<html class="no-js"> <!--<![endif]-->
+<html class="no-js">
+ <!--<![endif]-->
 <head>
 
     <!-- Meta-Information -->
     <title>About Car Finder</title>
     <meta charset="utf-8">
-    <meta name="description" content="AngularJs, html5, store, shopping, siteweb, cart"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="description" content="AngularJs, html5, store, shopping, siteweb, cart" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css"/>
-    <link rel="stylesheet" href="css/bootstrap/bootstrap-theme.min.css"/>
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/bootstrap/bootstrap-theme.min.css" />
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet" />
 
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,700,600,300' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Raleway:400,100,200,300,500,600,800,700,900' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Raleway:400,100,200,300,500,600,800,700,900' rel='stylesheet' type='text/css'>
 
     <link href="css/minislide/flexslider.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="css/main.css"/>
+    <link rel="stylesheet" href="css/main.css" />
     <link href="css/responsive.css" rel="stylesheet" type="text/css" />
     <style>
         .myFeatures {
             font-size: large;
             font-weight: bold;
         }
+
         .navbar-default .navbar-brand:hover,
         .navbar-default .navbar-brand:focus {
             color: #ADCAAD !important;
@@ -38,15 +40,16 @@
 
         #tgpLogo {
             color: #333;
-            visibility:visible;
+            visibility: visible;
         }
-        .navbar-default .navbar-nav > li > a:hover,
-        .navbar-default .navbar-nav > li > a:focus,
-        #tgpLogo:hover, #tgpLogo:focus {
-            color: #ADCAAD !important;
-            text-decoration:none;
-            /*background-color: transparent;*/
-        }
+
+            .navbar-default .navbar-nav > li > a:hover,
+            .navbar-default .navbar-nav > li > a:focus,
+            #tgpLogo:hover, #tgpLogo:focus {
+                color: #ADCAAD !important;
+                text-decoration: none;
+                /*background-color: transparent;*/
+            }
     </style>
 
 </head>
@@ -67,7 +70,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="carFindDB.html">Database</a></li>
-                    
+
                     <li><a href="/Help/Index">API</a></li>
                     <!--<li><a href="http://tpeara.azurewebsites.net">T-Peara</a></li>-->
                 </ul>
@@ -75,67 +78,67 @@
             </div>
         </div>
     </nav>
-<div class="about2-top-img">
-  <div class="effect-about2-over"></div><div id="particles-js"></div>
-    <div class="container">
-      <div class="col-lg-12">
-       
-       <h1 class="about2-top-title">Technologies <span class="color-txt">in</span> Website!</h1>
-      </div>
-    </div> 
-</div>
-<div class="breadcrumb-color">
-    <div class="container">
-        <div class="row">
+    <div class="about2-top-img">
+        <div class="effect-about2-over"></div><div id="particles-js"></div>
+        <div class="container">
             <div class="col-lg-12">
-                <ol class="breadcrumb">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="carFindDB.html">Database</a></li>
-                    <li><a href="/Help/Index">API</a></li>
-                </ol>
+
+                <h1 class="about2-top-title">Technologies <span class="color-txt">in</span> Website!</h1>
             </div>
         </div>
-      </div>
-</div>
-<div class="container about-pg-2">
-    <div class="row">
+    </div>
+    <div class="breadcrumb-color">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <ol class="breadcrumb">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="carFindDB.html">Database</a></li>
+                        <li><a href="/Help/Index">API</a></li>
+                    </ol>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container about-pg-2">
+        <div class="row">
 
-        <div class="col-md-6">
-             <section class="slider">
+            <div class="col-md-6">
+                <section class="slider">
                     <div id="slider" class="flexslider .flexslider-attachments">
                         <ul class="slides">
                             <!--<li data-thumb="images/slider/mini-slider/thumb1.jpg"><img src="images/slider/mini-slider/1.jpg" alt=""/></li>
-  	    	                <li data-thumb="images/slider/mini-slider/thumb2.jpg"><img src="images/slider/mini-slider/2.jpg" alt=""/></li>
-  	    	                <li data-thumb="images/slider/mini-slider/thumb3.jpg"><img src="images/slider/mini-slider/3.jpg" alt=""/></li>-->
-                            <li><img src="img/logos/IzendaWebLogos.png" alt=""/></li>
-                            <li><img src="img/logos/jQueryNgUI.png" width="630" height="210" alt=""/></li>
+                            <li data-thumb="images/slider/mini-slider/thumb2.jpg"><img src="images/slider/mini-slider/2.jpg" alt=""/></li>
+                            <li data-thumb="images/slider/mini-slider/thumb3.jpg"><img src="images/slider/mini-slider/3.jpg" alt=""/></li>-->
+                            <li><img src="img/logos/IzendaWebLogos.png" alt="" /></li>
+                            <li><img src="img/logos/jQueryNgUI.png" width="630" height="210" alt="" /></li>
                             <li><img src="img/logos/SQLS-Angula.png" width="500" height="210" alt="" /></li>
                         </ul>
                     </div>
-             </section>
+                </section>
+            </div>
+            <div class="col-md-6">
+                <h2 class="t-title-office office2"><span>Welcome to Car Finder</span></h2>
+                <h3>This website is built using:</h3>
+                <ul class="myFeatures">
+                    <li>HTML5 / CSS3 / JavaScript</li>
+                    <li>jQuery / Angular JS / UI-Bootstrap</li>
+                    <li>SQL Server</li>
+                    <li>Angula Template </li>
+                </ul>
+                <h3>Features include:</h3>
+                <ul class="myFeatures">
+                    <li>Dual Search Logic - start with years or makes</li>
+                    <li>Custom Filters</li>
+                    <li>Animated Elements</li>
+                </ul>
+            </div>
+
         </div>
-        <div class="col-md-6">
-            <h2 class="t-title-office office2"><span>Welcome to Car Finder</span></h2>
-            <h3>This website is built using:</h3>
-            <ul class="myFeatures">
-                <li>HTML5 / CSS3 / JavaScript</li>
-                <li>jQuery / Angular JS / UI-Bootstrap</li>
-                <li>SQL Server</li>
-                <li>Angula Template </li>
-            </ul>
-            <h3>Features include:</h3>
-            <ul class="myFeatures">
-                <li>Dual Search Logic - start with years or makes</li>
-                <li>Custom Filters</li>
-                <li>Animated Elements</li>
-            </ul>
-        </div>
+
 
     </div>
-
-
-</div>
-<!-- /.container -->
+    <!-- /.container -->
 
     <footer>
 
@@ -153,17 +156,17 @@
 
     </footer>
 
-<script src="js/jquery.min.js" type="text/javascript"></script>
-<script src="js/bootstrap.min.js" type="text/javascript"></script>
-<script src="js/owl_carousel/owl.carousel.min.js" type="text/javascript"></script>
-<!--Mini Flexslide-->
-<script src="js/minislide/jquery.flexslider.js" type="text/javascript"></script>
+    <script src="js/jquery.min.js" type="text/javascript"></script>
+    <script src="js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="js/owl_carousel/owl.carousel.min.js" type="text/javascript"></script>
+    <!--Mini Flexslide-->
+    <script src="js/minislide/jquery.flexslider.js" type="text/javascript"></script>
 
-<script src="js/minislide/shCore.js" type="text/javascript"></script>
-<script src="js/minislide/shBrushXml.js" type="text/javascript"></script>
-<script src="js/minislide/shBrushJScript.js" type="text/javascript"></script>
+    <script src="js/minislide/shCore.js" type="text/javascript"></script>
+    <script src="js/minislide/shBrushXml.js" type="text/javascript"></script>
+    <script src="js/minislide/shBrushJScript.js" type="text/javascript"></script>
 
-<script src="js/script.js" type="text/javascript"></script>
+    <script src="js/script.js" type="text/javascript"></script>
 
     <script src="js/particles.min.js" type="text/javascript"></script>
     <script src="js/app.js"></script>
